waybar works with new theme and font

--- a/home/hypr/waybar/style.css
+++ b/home/hypr/waybar/style.css
@@ -3,7 +3,7 @@
 
 * {
   border: none;
-  font-family: 'JetBrainsMono Nerd Font' , 'Symbols Only';
+  font-family: 'JetBrainsMonoNL Nerd Font Mono' , 'Symbols Only';
   font-size: 16px;
   font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';
   min-height: 30px;
