--- a/home/hypr/waybar/Waybar-3.0/style.css
+++ b/home/hypr/waybar/Waybar-3.0/style.css
@@ -24,34 +24,17 @@ window#waybar {
   background-color: #1a1c2b;
 }
 
-/* #cpu, */
-/* #memory */
-/* #temperature{ */
-/*   font-size: 15px; */
-/*   margin-top: 5px; */
-/*   margin-bottom: 5px; */
-/*   background-color: #2a2d45; */
-/* } */
-/**/
-/* #cpu { */
-/*   color: #eed49f; */
-/*   padding: 0px 10px 0px 12px; */
-/*   border-radius: 5px 0px 0px 5px; */
-/* } */
-/**/
-/* #memory { */
-/*   color: #a6da95; */
-/*   padding: 0px 10px 0px 0px; */
-/* } */
-/**/
-/* #temperature { */
-/*   color: #8aadf4; */
-/*   padding: 0px 12px 0px 0px; */
-/*   border-radius: 0px 5px 5px 0px; */
-/* } */
+#custom-bluetooth {
+  color: #68b0d6;
+}
+
+#clock {
+  color: #eed49f;
+}
 
 #cpu,
 #memory,
+#disk,
 #temperature {
   font-size: 15px;
   background: #2a2d45;
@@ -67,6 +50,11 @@ window#waybar {
 
 #memory {
   color: #a6da95;
+  padding: 0px 10px 0px 0px;
+}
+
+#disk {
+  color: #68b0d6;
   padding: 0px 10px 0px 0px;
 }
 
@@ -173,8 +161,8 @@ window#waybar {
 
 #pulseaudio {
   color: #91d7e3;
-  padding: 0px 10px 0px 0px;
-  border-radius: 0px 5px 5px 0px;
+  padding: 0px 10px 0px 10px;
+  border-radius: 5px 5px 5px 5px;
 }
 
 #custom-right-arr {
@@ -203,11 +191,6 @@ window#waybar {
   color: #a5adcb;
   padding-left: 10px;
   padding-right: 10px;
-}
-
-#disk {
-  color: #68b0d6;
-  background-color: #1a1c2b;
 }
 
 #custom-clock-icon {
