added working player information to waybar

--- a/home/hypr/waybar/Waybar-3.0/style.css
+++ b/home/hypr/waybar/Waybar-3.0/style.css
@@ -224,5 +224,11 @@ window#waybar {
   padding-left: 10px;
 }
 
+#custom-playerctl {
+  /* color: #1F6840; */
+  /* color: #A3E3C0; */
+  color: #BDEBD2;
+}
+
 /*# sourceMappingURL=style.css.map */
 
